@@ -2,8 +2,10 @@ package de.tum.cit.aet.artemis.notification.notifications.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
+import java.time.LocalDate;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -28,6 +30,8 @@ import com.icegreen.greenmail.util.ServerSetupTest;
 import de.tum.cit.aet.artemis.account.domain.User;
 import de.tum.cit.aet.artemis.admin.dto.ComponentVulnerabilitiesDTO;
 import de.tum.cit.aet.artemis.admin.dto.ComponentWithVulnerabilitiesDTO;
+import de.tum.cit.aet.artemis.admin.dto.FeatureUsageDigestDTO;
+import de.tum.cit.aet.artemis.admin.dto.FeatureUsageModuleSummaryDTO;
 import de.tum.cit.aet.artemis.admin.dto.VulnerabilityDTO;
 import de.tum.cit.aet.artemis.core.config.ArtemisProperties;
 import de.tum.cit.aet.artemis.core.dto.ArtemisVersionDTO;
@@ -83,10 +87,10 @@ class MailServiceEmailIntegrationTest extends AbstractSpringIntegrationIndepende
         mailEnabledProperties.getMail().setFrom("test@greenmail.test");
 
         testMailSendingService = new MailSendingService(mailEnabledProperties, greenMailSender, mainMessageSource, testTemplateEngine);
-        ReflectionTestUtils.setField(testMailSendingService, "artemisServerUrl", new URL("http://localhost:9000"));
+        ReflectionTestUtils.setField(testMailSendingService, "artemisServerUrl", URI.create("http://localhost:9000").toURL());
 
         testMailService = new MailService(mainMessageSource, testTemplateEngine, testMailSendingService);
-        ReflectionTestUtils.setField(testMailService, "artemisServerUrl", new URL("http://localhost:9000"));
+        ReflectionTestUtils.setField(testMailService, "artemisServerUrl", URI.create("http://localhost:9000").toURL());
 
         recipient = new User();
         recipient.setEmail("user@greenmail.test");
@@ -160,24 +164,16 @@ class MailServiceEmailIntegrationTest extends AbstractSpringIntegrationIndepende
         assertUsesSharedArtemisLayout(getDeliveredEmailBody());
     }
 
-    @Test
-    void saml2SetPasswordEmail_shouldUseTheSharedArtemisLayout() throws Exception {
-
-        testMailService.sendSAML2SetPasswordMail(MailRecipientDTO.withResetKeyFrom(recipient, new PasswordResetKeyDTO("abc", "abc")));
-
-        assertUsesSharedArtemisLayout(getDeliveredEmailBody());
-    }
-
     /**
      * Asserts that a mail carries the shared Artemis chrome.
      * <p>
-     * The three account mails that contain a link are the ones a user is most likely to distrust, because each can
-     * arrive unprompted: anyone can type someone else's address into the reset form. Looking like every other Artemis
-     * mail is what makes them credible rather than suspicious, and all three used to render as unstyled documents in
-     * the mail client's default serif font.
+     * The account mails that contain a link are the ones a user is most likely to distrust, because each can arrive
+     * unprompted: anyone can type someone else's address into the reset form. Looking like every other Artemis mail is
+     * what makes them credible rather than suspicious, and they used to render as unstyled documents in the mail
+     * client's default serif font.
      * <p>
-     * The absence of the footer is asserted too. That footer links to the notification settings, and none of these
-     * three can be switched off there, so the link would point at a setting that does not exist for them.
+     * The absence of the footer is asserted too. That footer links to the notification settings, and none of these can
+     * be switched off there, so the link would point at a setting that does not exist for them.
      *
      * @param body the rendered mail body
      */
@@ -191,30 +187,6 @@ class MailServiceEmailIntegrationTest extends AbstractSpringIntegrationIndepende
         // deployment would both ignore a custom logo and make every recipient's mail client fetch an image from there.
         assertThat(body).as("the logo, served by this installation so a custom one is used").contains("src=\"http://localhost:9000/public/images/logo.png\"");
         assertThat(body).as("no request to the TUM deployment").doesNotContain("artemis.tum.de");
-    }
-
-    // -- SAML2 set password email --
-
-    @Test
-    void saml2SetPasswordEmail_shouldRenderAndDeliverInEnglish() throws Exception {
-        testMailService.sendSAML2SetPasswordMail(MailRecipientDTO.withResetKeyFrom(recipient, new PasswordResetKeyDTO("saml-id-for-345", "saml-secret-for-345")));
-
-        String body = getDeliveredEmailBody();
-        assertThat(body).contains("saml-id-for-345");
-        assertThat(body).contains("saml-secret-for-345");
-        assertThat(body).contains("account/reset/finish");
-    }
-
-    @Test
-    void saml2SetPasswordEmail_shouldRenderAndDeliverInGerman() throws Exception {
-        recipient.setLangKey("de");
-
-        testMailService.sendSAML2SetPasswordMail(MailRecipientDTO.withResetKeyFrom(recipient, new PasswordResetKeyDTO("saml-id-for-678", "saml-secret-for-678")));
-
-        String body = getDeliveredEmailBody();
-        assertThat(body).contains("saml-id-for-678");
-        assertThat(body).contains("saml-secret-for-678");
-        assertThat(body).contains("account/reset/finish");
     }
 
     // -- New login notification email --
@@ -273,7 +245,7 @@ class MailServiceEmailIntegrationTest extends AbstractSpringIntegrationIndepende
     @Test
     void emailChangedEmail_shouldRenderAndDeliverInEnglish() throws Exception {
         testMailSendingService.buildAndSendSync(MailRecipientDTO.from(recipient), "email.notification.emailChanged.title", "mail/notification/emailChangedEmail",
-                new HashMap<>(Map.of("newEmail", "new-address@tum.de")));
+                new HashMap<>(Map.of("emailRemoved", false, "newEmail", "new-address@tum.de")));
 
         String body = getDeliveredEmailBody();
         assertThat(body).contains("new-address@tum.de");
@@ -286,7 +258,7 @@ class MailServiceEmailIntegrationTest extends AbstractSpringIntegrationIndepende
         recipient.setLangKey("de");
 
         testMailSendingService.buildAndSendSync(MailRecipientDTO.from(recipient), "email.notification.emailChanged.title", "mail/notification/emailChangedEmail",
-                new HashMap<>(Map.of("newEmail", "new-address@tum.de")));
+                new HashMap<>(Map.of("emailRemoved", false, "newEmail", "new-address@tum.de")));
 
         String body = getDeliveredEmailBody();
         assertThat(body).contains("new-address@tum.de");
@@ -298,7 +270,7 @@ class MailServiceEmailIntegrationTest extends AbstractSpringIntegrationIndepende
         // The address reaches the template from user input, so it has to be escaped. The template uses th:text for
         // exactly this reason; th:utext would turn a crafted address into live markup in the recipient's client.
         testMailSendingService.buildAndSendSync(MailRecipientDTO.from(recipient), "email.notification.emailChanged.title", "mail/notification/emailChangedEmail",
-                new HashMap<>(Map.of("newEmail", "<script>alert(1)</script>@tum.de")));
+                new HashMap<>(Map.of("emailRemoved", false, "newEmail", "<script>alert(1)</script>@tum.de")));
 
         String body = getDeliveredEmailBody();
         assertThat(body).doesNotContain("<script>alert(1)</script>");
@@ -536,6 +508,67 @@ class MailServiceEmailIntegrationTest extends AbstractSpringIntegrationIndepende
         String body = getDeliveredEmailBody();
         assertThat(body).contains("7.8.0");
         assertThat(body).contains("admin/dependencies");
+    }
+
+    // -- Weekly feature usage digest --
+
+    @Test
+    void featureUsageDigestEmail_shouldRenderAndDeliverInEnglish() throws Exception {
+        testMailService.sendFeatureUsageDigestEmail(MailRecipientDTO.from(recipient), featureUsageDigest());
+
+        String body = getDeliveredEmailBody();
+        assertThat(body).contains("programming");
+        assertThat(body).contains("1500");
+        // the previous window was smaller, so the change has to read as a rise
+        assertThat(body).contains("+50%");
+        // a module nobody touched is named rather than shown as a row of zeros
+        assertThat(body).contains("lecture");
+        // the whole point of the mail is to get someone onto the page
+        assertThat(body).contains("admin/feature-usage");
+    }
+
+    @Test
+    void featureUsageDigestEmail_shouldRenderAndDeliverInGerman() throws Exception {
+        recipient.setLangKey("de");
+
+        testMailService.sendFeatureUsageDigestEmail(MailRecipientDTO.from(recipient), featureUsageDigest());
+
+        String body = getDeliveredEmailBody();
+        // proves the German message keys exist too; a missing key would render as ??key??
+        assertThat(body).doesNotContain("??");
+        assertThat(body).contains("Nutzung pro Modul");
+        assertThat(body).contains("admin/feature-usage");
+    }
+
+    @Test
+    void featureUsageDigestEmail_shouldSayWhenNothingWasRecorded() throws Exception {
+        var empty = new FeatureUsageDigestDTO(7, LocalDate.of(2026, 2, 10), LocalDate.of(2026, 2, 16), 0, 0, 0, 0, 0, 0, null, List.of(), List.of());
+
+        testMailService.sendFeatureUsageDigestEmail(MailRecipientDTO.from(recipient), empty);
+
+        String body = getDeliveredEmailBody();
+        // an empty deployment must not receive a table of zeros presented as a finding
+        assertThat(body).contains("No usage at all was recorded");
+        assertThat(body).doesNotContain("Usage per module");
+    }
+
+    @Test
+    void featureUsageDigestEmail_shouldOmitTheChangeWhenThereIsNoPreviousData() throws Exception {
+        var module = new FeatureUsageModuleSummaryDTO("programming", 1500, 0, 3, 40, 60, 20);
+        var digest = new FeatureUsageDigestDTO(7, LocalDate.of(2026, 2, 10), LocalDate.of(2026, 2, 16), 1500, 0, 60, 40, 20, 2, null, List.of(module), List.of());
+
+        testMailService.sendFeatureUsageDigestEmail(MailRecipientDTO.from(recipient), digest);
+
+        String body = getDeliveredEmailBody();
+        assertThat(body).contains("n/a");
+        assertThat(body).doesNotContain("%</span>");
+    }
+
+    private static FeatureUsageDigestDTO featureUsageDigest() {
+        var programming = new FeatureUsageModuleSummaryDTO("programming", 1500, 1000, 3, 40, 60, 20);
+        var exam = new FeatureUsageModuleSummaryDTO("exam", 200, 400, 0, 10, 12, 2);
+        return new FeatureUsageDigestDTO(7, LocalDate.of(2026, 2, 10), LocalDate.of(2026, 2, 16), 1700, 1400, 72, 50, 22, 2, Instant.parse("2026-01-01T00:00:00Z"),
+                List.of(programming, exam), List.of("lecture", "quiz"));
     }
 
     private Map<String, Object> createLoginEmailContext(String authMethod, String loginDate, String loginTime, String requestOrigin, String resetLink) {
